--- a/resources/testweb/userdashboard_prices.html
+++ b/resources/testweb/userdashboard_prices.html
@@ -14,7 +14,7 @@
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 
   <!-- Bootstrap core CSS -->
-  <link href="darkly.bootstrap.css" rel="stylesheet">
+  <link href="darkly.bootstrap.min.css" rel="stylesheet">
 
   <!-- Link to font awesome -->
   <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
