--- a/resources/testweb/creatordashboard.html
+++ b/resources/testweb/creatordashboard.html
@@ -149,8 +149,8 @@
     </div>
   </div>
 
-  <button id="helloBtn" type="button" class="btn btn-default">Hello!</button>
-  <button id="piecesownedtotalBtn" type="button" class="btn btn-default">Pieces Owned Total</button>
+  <button id="helloBtn" type="button" class="btn btn-primary">Hello!</button>
+  <button id="piecesownedtotalBtn" type="button" class="btn btn-primary">Pieces Owned Total</button>
   <div id="piecesownedDiv">Loading...
     <script id="piecesownedTemplate" type="x-tmpl-mustache">
       pieces owned 
