--- a/resources/testweb/landing.html
+++ b/resources/testweb/landing.html
@@ -86,7 +86,7 @@
       <div class="form-group">
        <input name="search_input" type="text" class="form-control typeahead" placeholder="Search for Creator...">
      </div>
-     <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
+     <button type="submit" class="btn btn-primary"><i class="fa fa-search"></i></button>
    </form>
 
 
@@ -210,13 +210,13 @@
           </div><!-- /.row -->
           <div class="row">
             <div class="col-lg-4">
-             <p><a class="btn btn-default" href="#" role="button" data-toggle="modal" data-target="#userloginModal" role="button">Sign up &raquo;</a></p>
+             <p><a class="btn btn-primary" href="#" role="button" data-toggle="modal" data-target="#userloginModal" role="button">Sign up &raquo;</a></p>
             </div>
             <div class="col-lg-4">
-            <p><a class="btn btn-default" href="FAQ#what_are_pieces" role="button">Learn more about pieces &raquo;</a></p>
+            <p><a class="btn btn-primary" href="FAQ#what_are_pieces" role="button">Learn more about pieces &raquo;</a></p>
             </div>
             <div class="col-lg-4">
-            <p><a class="btn btn-default" href="FAQ#what_are_rewards" role="button">Learn more about rewards &raquo;</a></p>
+            <p><a class="btn btn-primary" href="FAQ#what_are_rewards" role="button">Learn more about rewards &raquo;</a></p>
             </div>
           </div>
 
@@ -552,7 +552,7 @@
 
     </div> 
     <div class="modal-footer">
-     <button type="button" class="btn btn-default" data-dismiss="modal">Okay, I accept</button>
+     <button type="button" class="btn btn-primary" data-dismiss="modal">Okay, I accept</button>
    </div>
 
    </div>
