--- a/resources/testweb/about.html
+++ b/resources/testweb/about.html
@@ -97,7 +97,7 @@
               <div class="form-group">
                <input name="search_input" type="text" class="form-control typeahead" placeholder="Search for Creator...">
              </div>
-             <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
+             <button type="submit" class="btn btn-primary"><i class="fa fa-search"></i></button>
            </form>
 
 
@@ -140,7 +140,7 @@
          In addition, smaller content-creators need a way to raise funds, and do so in a way that makes their funders feel safe. While numerous small stock-like exchanges exist, none feel suited for the web, for the type of content people make in today's world, or for low-end content creators who just want to keeping making the things.
          <br><br>
 
-         <a class="btn btn-default" href="/FAQ" role="button">Learn more &raquo;</a>
+         <a class="btn btn-primary" href="/FAQ" role="button">Learn more &raquo;</a>
 
 
        </div>
