--- a/resources/testweb/contact.html
+++ b/resources/testweb/contact.html
@@ -97,7 +97,7 @@
               <div class="form-group">
                <input name="search_input" type="text" class="form-control typeahead" placeholder="Search for Creator...">
              </div>
-             <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
+             <button type="submit" class="btn btn-primary"><i class="fa fa-search"></i></button>
            </form>
 
 
@@ -150,7 +150,7 @@
           </ul>
 
          <br><br>
-         <a class="btn btn-default" href="/FAQ" role="button">Learn more &raquo;</a>
+         <a class="btn btn-primary" href="/FAQ" role="button">Learn more &raquo;</a>
 
 
        </div>
