--- a/resources/testweb/creators_register.html
+++ b/resources/testweb/creators_register.html
@@ -83,7 +83,7 @@
               <div class="form-group">
                <input name="search_input" type="text" class="form-control typeahead" placeholder="Search for Creator...">
              </div>
-             <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
+             <button type="submit" class="btn btn-primary"><i class="fa fa-search"></i></button>
            </form>
 
 
@@ -435,7 +435,7 @@
 
       </div> 
       <div class="modal-footer">
-       <button type="button" class="btn btn-default" data-dismiss="modal">Okay, I accept</button>
+       <button type="button" class="btn btn-primary" data-dismiss="modal">Okay, I accept</button>
      </div>
 
    </div>
