--- a/resources/testweb/sb-admin/bootstrap-elements.html
+++ b/resources/testweb/sb-admin/bootstrap-elements.html
@@ -143,7 +143,7 @@
           <div class="col-lg-6">
 
               <p>
-                <button type="button" class="btn btn-default">Default</button>
+                <button type="button" class="btn btn-primary">Default</button>
                 <button type="button" class="btn btn-primary">Primary</button>
                 <button type="button" class="btn btn-success">Success</button>
                 <button type="button" class="btn btn-info">Info</button>
@@ -153,7 +153,7 @@
               </p>
 
               <p>
-                <button type="button" class="btn btn-default disabled">Default</button>
+                <button type="button" class="btn btn-primary disabled">Default</button>
                 <button type="button" class="btn btn-primary disabled">Primary</button>
                 <button type="button" class="btn btn-success disabled">Success</button>
                 <button type="button" class="btn btn-info disabled">Info</button>
@@ -164,8 +164,8 @@
               
               <p>
                 <div class="btn-group">
-                  <button type="button" class="btn btn-default">Default</button>
-                  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
+                  <button type="button" class="btn btn-primary">Default</button>
+                  <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
                   <ul class="dropdown-menu">
                     <li><a href="#">Action</a></li>
                     <li><a href="#">Another action</a></li>
@@ -232,35 +232,35 @@
           <div class="col-lg-6">
           
             <p>
-              <button type="button" class="btn btn-default btn-lg btn-block">Block level button</button>
+              <button type="button" class="btn btn-primary btn-lg btn-block">Block level button</button>
             </p>
 
             <p>
               <div class="btn-group btn-group-justified">
-                <a href="#" class="btn btn-default">Left</a>
-                <a href="#" class="btn btn-default">Right</a>
-                <a href="#" class="btn btn-default">Middle</a>
+                <a href="#" class="btn btn-primary">Left</a>
+                <a href="#" class="btn btn-primary">Right</a>
+                <a href="#" class="btn btn-primary">Middle</a>
               </div>
             </p>
 
             <p>
               <div class="btn-toolbar">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-default">1</button>
-                  <button type="button" class="btn btn-default">2</button>
-                  <button type="button" class="btn btn-default">3</button>
-                  <button type="button" class="btn btn-default">4</button>
+                  <button type="button" class="btn btn-primary">1</button>
+                  <button type="button" class="btn btn-primary">2</button>
+                  <button type="button" class="btn btn-primary">3</button>
+                  <button type="button" class="btn btn-primary">4</button>
                 </div>
                 <div class="btn-group">
-                  <button type="button" class="btn btn-default">5</button>
-                  <button type="button" class="btn btn-default">6</button>
-                  <button type="button" class="btn btn-default">7</button>
+                  <button type="button" class="btn btn-primary">5</button>
+                  <button type="button" class="btn btn-primary">6</button>
+                  <button type="button" class="btn btn-primary">7</button>
                 </div>
                 <div class="btn-group">
-                  <button type="button" class="btn btn-default">8</button>
+                  <button type="button" class="btn btn-primary">8</button>
 
                   <div class="btn-group">
-                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                    <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
                       Dropdown
                       <span class="caret"></span>
                     </button>
@@ -276,10 +276,10 @@
 
             <p>
               <div class="btn-group-vertical">
-                  <button type="button" class="btn btn-default">Button</button>
-                  <button type="button" class="btn btn-default">Button</button>
-                  <button type="button" class="btn btn-default">Button</button>
-                  <button type="button" class="btn btn-default">Button</button>
+                  <button type="button" class="btn btn-primary">Button</button>
+                  <button type="button" class="btn btn-primary">Button</button>
+                  <button type="button" class="btn btn-primary">Button</button>
+                  <button type="button" class="btn btn-primary">Button</button>
               </div>
             </p>
 
