--- a/resources/testweb/sb-admin/forms.html
+++ b/resources/testweb/sb-admin/forms.html
@@ -256,8 +256,8 @@
                 </select>
               </div>
 
-              <button type="submit" class="btn btn-default">Submit Button</button>
-              <button type="reset" class="btn btn-default">Reset Button</button>  
+              <button type="submit" class="btn btn-primary">Submit Button</button>
+              <button type="reset" class="btn btn-primary">Reset Button</button>  
 
             </form>
 
@@ -342,7 +342,7 @@
               <div class="form-group input-group">
                 <input type="text" class="form-control">
                 <span class="input-group-btn">
-                  <button class="btn btn-default" type="button"><i class="fa fa-search"></i></button>
+                  <button class="btn btn-primary" type="button"><i class="fa fa-search"></i></button>
                 </span>
               </div>
 
