--- a/resources/testweb/summernote/examples/textarea.html
+++ b/resources/testweb/summernote/examples/textarea.html
@@ -31,7 +31,7 @@
 <body>
 <form>
   <textarea class="summernote"><p>Seasons <b>coming up</b></p></textarea>
-  <button type="submit" class="btn btn-default">submit</button>
+  <button type="submit" class="btn btn-primary">submit</button>
 </form>
 </body>
 </html>
