--- a/resources/testweb/testing_home.html
+++ b/resources/testweb/testing_home.html
@@ -97,7 +97,7 @@
               <div class="form-group">
                <input name="search_input" type="text" class="form-control typeahead" placeholder="Search for Creator...">
              </div>
-             <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
+             <button type="submit" class="btn btn-primary"><i class="fa fa-search"></i></button>
            </form>
 
 
@@ -147,10 +147,10 @@
      <br><br>
      <div class="row">
        <div class="col-md-6">
-         <a class="btn btn-default" href="/landing" role="button">Main page &raquo;</a>
+         <a class="btn btn-primary" href="/landing" role="button">Main page &raquo;</a>
        </div>
        <div class="col-md-6">
-         <a class="btn btn-default" href="/FAQ" role="button">Learn more &raquo;</a>
+         <a class="btn btn-primary" href="/FAQ" role="button">Learn more &raquo;</a>
        </div>
      </div>
 
@@ -421,7 +421,7 @@
 
     </div> 
     <div class="modal-footer">
-     <button type="button" class="btn btn-default" data-dismiss="modal">Okay, I accept</button>
+     <button type="button" class="btn btn-primary" data-dismiss="modal">Okay, I accept</button>
    </div>
 
    </div>
