--- a/resources/testweb/userdashboard_overview.html
+++ b/resources/testweb/userdashboard_overview.html
@@ -88,7 +88,7 @@
               <div class="form-group">
                <input name="search_input" type="text" class="form-control typeahead" placeholder="Search for Creator...">
              </div>
-             <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
+             <button type="submit" class="btn btn-primary"><i class="fa fa-search"></i></button>
            </form>
 
 
@@ -165,8 +165,8 @@
           <h1> <span id="page_title"></span> <small> overview</small> </h1> 
         </div>
         <div class="col-md-6">
-          <button id="depositBtn" type="button" class="btn btn-default btn-lg pull-right hide" data-toggle="modal" data-target="#depositModal">Deposit</button>
-          <button id="withdrawBtn" type="button" class="btn btn-default btn-lg pull-right hide" data-toggle="modal" data-target="#withdrawModal">Withdraw</button>
+          <button id="depositBtn" type="button" class="btn btn-primary btn-lg pull-right hide" data-toggle="modal" data-target="#depositModal">Deposit</button>
+          <button id="withdrawBtn" type="button" class="btn btn-primary btn-lg pull-right hide" data-toggle="modal" data-target="#withdrawModal">Withdraw</button>
 
         </div>
       </div>
