--- a/resources/testweb/userdashboard_settings.html
+++ b/resources/testweb/userdashboard_settings.html
@@ -88,7 +88,7 @@
               <div class="form-group">
                <input name="search_input" type="text" class="form-control typeahead" placeholder="Search for Creator...">
              </div>
-             <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
+             <button type="submit" class="btn btn-primary"><i class="fa fa-search"></i></button>
            </form>
 
 
@@ -257,7 +257,7 @@
   </div>
 </div>
 
- <a class="btn btn-default" href="#" role="button" data-toggle="modal" data-target="#changePasswordModal" role="button">Change password</a>
+ <a class="btn btn-primary" href="#" role="button" data-toggle="modal" data-target="#changePasswordModal" role="button">Change password</a>
 
 </form>
 </script>
