--- a/resources/testweb/landing.html
+++ b/resources/testweb/landing.html
@@ -67,7 +67,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
      <ul class="nav navbar-nav">
-      <li><a href="/">Home</a></li>
+      <li class="active"><a href="/">Home</a></li>
       <li><a href="/discover">Discover</a></li>
       <li><a href="/creators_register">Creators</a></li> 
       <li><a href="/userdashboard_overview" id="dashboardhref" class="hide">Dashboard</a></li>
