--- a/resources/testweb/creators_register.html
+++ b/resources/testweb/creators_register.html
@@ -64,8 +64,8 @@
               <ul class="nav navbar-nav">
                <li><a href="/">Home</a></li>
                <li><a href="/discover">Discover</a></li>
-               <li><a href="/creators_register">Creators</a></li> 
-               <li class="active"><a href="/userdashboard_overview" id="dashboardhref" class="hide">Dashboard</a></li>
+               <li class="active"><a href="/creators_register">Creators</a></li> 
+               <li><a href="/userdashboard_overview" id="dashboardhref" class="hide">Dashboard</a></li>
                <!-- <li><a href="#login" id="loginhref" data-toggle="modal" data-target="#userloginModal">Login/Register</a></li>
                <li><a href="#logout" class="hide">Log Out</a></li> -->
                <li class="dropdown">
