--- a/resources/testweb/FAQ.html
+++ b/resources/testweb/FAQ.html
@@ -82,7 +82,7 @@
         <li><a href="userdashboard_overview" id="dashboardhref" class="hide">Dashboard</a></li>
                <!-- <li><a href="#login" id="loginhref" data-toggle="modal" data-target="#userloginModal">Login/Register</a></li>
                <li><a href="#logout" class="hide">Log Out</a></li> -->
-               <li class="dropdown">
+               <li class="active dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Resources <b class="caret"></b></a>
                 <ul class="dropdown-menu">
                   <li><a href="/about">About Bitpieces</a></li>
