changed to color pics

--- a/resources/testweb/landing.html
+++ b/resources/testweb/landing.html
@@ -124,7 +124,7 @@
         <div class="carousel-inner">
           <div class="item active">
             <div class="900-image" align="center">
-              <img class="img-responsive center-block" src="img/market-practices-3.jpg" alt="First slide">
+              <img class="img-responsive center-block" src="img/market-practices.jpg" alt="First slide">
             </div>
             <div class="container">
               <div class="carousel-caption">
@@ -137,7 +137,7 @@
             </div>
             <div class="item">
               <div class="900-image" align="center">
-                <img class="img-responsive center-block" src="img/500xaaa4752463128_9a43bfb383_o.jpg"alt="Second slide">
+                <img class="img-responsive center-block" src="img/group.jpg"alt="Second slide">
               </div>
               <div class="container">
                 <div class="carousel-caption">
@@ -149,7 +149,7 @@
             </div>
             <div class="item">
               <div class="900-image" align="center">
-                <img class="img-responsive center-block" src="img/500x1065025171_d7ed482beb_o.jpg" alt="Third slide">
+                <img class="img-responsive center-block" src="img/group3.jpg" alt="Third slide">
               </div>
               <div class="container">
                 <div class="carousel-caption">
@@ -232,7 +232,7 @@
 
           <div id="fund_creativity" class="row featurette">
             <div class="col-md-5">
-              <img class="featurette-image img-responsive" src="img/500x3583394219_2323ff7be1_o.jpg" alt="Generic placeholder image">
+              <img class="featurette-image img-responsive" src="img/group2square.jpg" alt="Generic placeholder image">
             </div>
             <div class="col-md-7">
               <h2 class="featurette-heading">Fund <span class="text-muted">creativity </span></h2>
@@ -250,7 +250,7 @@
               </p>
             </div>
             <div class="col-md-5">
-              <img class="featurette-image img-responsive" src="img/500x500_10306525406_fa5566482f_o.jpg" alt="Generic placeholder image">
+              <img class="featurette-image img-responsive" src="img/btc1" alt="Generic placeholder image">
             </div>
           </div>
 
@@ -258,7 +258,7 @@
 
           <div class="row featurette">
             <div class="col-md-5">
-              <img class="featurette-image img-responsive" src="img/500x13177007423_b8d330a42a_k.jpg" alt="Generic placeholder image">
+              <img class="featurette-image img-responsive" src="img/guitarists.jpg" alt="Generic placeholder image">
             </div>
             <div class="col-md-7">
               <h2 class="featurette-heading">Zero fees on a <span class="text-muted">secure platform </span></h2>
@@ -276,7 +276,7 @@
 
             </div>
             <div class="col-md-5">
-              <img class="featurette-image img-responsive" src="img/500x13805644585_63b1b832d4_k.jpg" alt="Generic placeholder image">
+              <img class="featurette-image img-responsive" src="img/comics.jpg" alt="Generic placeholder image">
             </div>
           </div>
 
