--- a/resources/testweb/landing.html
+++ b/resources/testweb/landing.html
@@ -250,7 +250,7 @@
               </p>
             </div>
             <div class="col-md-5">
-              <img class="featurette-image img-responsive" src="img/btc1" alt="Generic placeholder image">
+              <img class="featurette-image img-responsive" src="img/btc1.jpg" alt="Generic placeholder image">
             </div>
           </div>
 
