--- a/resources/testweb/userdashboard_pieces.html
+++ b/resources/testweb/userdashboard_pieces.html
@@ -137,7 +137,7 @@
           </li>
 
           <a class="list-group-item" href="/users/funds" rel="keep-params"><i class="fa fa-bank"></i> Funds</a>
-          <a class="list-group-item active" href="/users/pieces" rel="keep-params"><i class="fa fa-puzzle-piece"></i> Pieces</a>
+          <a class="list-group-item active" href="/users/pieces" rel="keep-params"><i class="fa fa-cubes"></i> Pieces</a>
           <a class="list-group-item" href="/users/prices" rel="keep-params"><i class="fa fa-dollar"></i> Prices</a>
         </div>
       </div>        
