--- a/resources/testweb/creator_overview.html
+++ b/resources/testweb/creator_overview.html
@@ -135,7 +135,7 @@
       </div>
       <div class="list-group">
         <li class="list-group-item">
-         <a href="/creators/overview" rel="keep-params"><i class="fa fa-dashboard"></i> Overview
+         <a href="/creators/overview" rel="keep-params"><i class="fa fa-dashboard"></i> Overasdfview
          <span id="slide-submenu"><i class="fa fa-times"></i></span></a>
          
        </li>
