--- a/resources/testweb/creator_overview.html
+++ b/resources/testweb/creator_overview.html
@@ -136,7 +136,7 @@
       <div class="list-group">
         <li class="list-group-item">
          <a href="/creators/overview" rel="keep-params"><i class="fa fa-dashboard"></i> Overview</a>
-         <span id="slide-submenu"><i class="fa fa-times"></i></span>
+         <span class="badge" id="slide-submenu"><i class="fa fa-times"></i></span>
        </li>
        <a class="list-group-item" href="/creators/main" rel="keep-params"><i class="fa fa-bar-chart-o"></i> Main</a>
        <a class="list-group-item" href="/creators/pricing" rel="keep-params"><i class="fa fa-dollar"></i> Price</a>
