--- a/resources/testweb/creator_overview.html
+++ b/resources/testweb/creator_overview.html
@@ -204,7 +204,7 @@
 
   <!-- The two top tables -->
   <div class="row"> 
-    <div class="col-md-6">
+    <div class="col-lg-6">
       <div class="panel panel-primary">
         <div class="panel-heading">
           <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Recent Activity</h3>
