--- a/resources/testweb/landing.html
+++ b/resources/testweb/landing.html
@@ -137,7 +137,7 @@
             </div>
             <div class="item">
               <div class="900-image" align="center">
-                <img class="img-responsive center-block" src="img/group.jpg"alt="Second slide">
+                <img src="img/group.jpg"alt="Second slide">
               </div>
               <div class="container">
                 <div class="carousel-caption">
@@ -149,7 +149,7 @@
             </div>
             <div class="item">
               <div class="900-image" align="center">
-                <img class="img-responsive center-block" src="img/group3.jpg" alt="Third slide">
+                <img src="img/group3.jpg" alt="Third slide">
               </div>
               <div class="container">
                 <div class="carousel-caption">
