--- a/resources/testweb/landing.html
+++ b/resources/testweb/landing.html
@@ -124,7 +124,8 @@
         <div class="carousel-inner">
           <div class="item active">
             <div class="900-image" align="center">
-              <img src="img/market-practices.jpg" alt="First slide">
+              <!-- <img src="img/market-practices.jpg" alt="First slide"> -->
+              <div style="background: url('img/market-practices.jpg') no-repeat center center transparent;">&nbsp;</div>
             </div>
             <div class="container">
               <div class="carousel-caption">
