--- a/resources/testweb/landing.html
+++ b/resources/testweb/landing.html
@@ -138,7 +138,8 @@
             </div>
             <div class="item">
               <div class="900-image" align="center">
-                <img src="img/group.jpg"alt="Second slide">
+               <!--  <img src="img/group.jpg"alt="Second slide"> -->
+                <div style="width:100%; height: 400px; background: url('img/group.jpg') no-repeat center center transparent;">&nbsp;</div>
               </div>
               <div class="container">
                 <div class="carousel-caption">
@@ -150,7 +151,8 @@
             </div>
             <div class="item">
               <div class="900-image" align="center">
-                <img src="img/group3.jpg" alt="Third slide">
+                <!-- <img src="img/group3.jpg" alt="Third slide"> -->
+                <div style="width:100%; height: 400px; background: url('img/group3.jpg') no-repeat center center transparent;">&nbsp;</div>
               </div>
               <div class="container">
                 <div class="carousel-caption">
