--- a/resources/testweb/landing.html
+++ b/resources/testweb/landing.html
@@ -139,7 +139,7 @@
             <div class="item">
               <div class="900-image" align="center">
                <!--  <img src="img/group.jpg"alt="Second slide"> -->
-                <div style="width:100%; height: 400px; background: url('img/group.jpg') no-repeat center center transparent;">&nbsp;</div>
+                <div class-"carousel-img-special" style="background: url('img/group.jpg') no-repeat center center transparent;">&nbsp;</div>
               </div>
               <div class="container">
                 <div class="carousel-caption">
