--- a/resources/testweb/landing.html
+++ b/resources/testweb/landing.html
@@ -125,7 +125,7 @@
           <div class="item active">
             <div class="900-image" align="center">
               <!-- <img src="img/market-practices.jpg" alt="First slide"> -->
-              <div style="background: url('img/market-practices.jpg')  width:100%; height: 400px; no-repeat center top transparent;">&nbsp;</div>
+              <div style="width:100%; height: 400px; background: url('img/market-practices.jpg')  no-repeat center top transparent;">&nbsp;</div>
             </div>
             <div class="container">
               <div class="carousel-caption">
@@ -139,7 +139,7 @@
             <div class="item">
               <div class="900-image" align="center">
                <!--  <img src="img/group.jpg"alt="Second slide"> -->
-                <div style="background: url('img/group.jpg') width:100%; height: 400px; no-repeat center top transparent;">&nbsp;</div>
+                <div style="width:100%; height: 400px; background: url('img/group.jpg') no-repeat center top transparent;">&nbsp;</div>
               </div>
               <div class="container">
                 <div class="carousel-caption">
@@ -152,7 +152,7 @@
             <div class="item">
               <div class="900-image" align="center">
                 <!-- <img src="img/group3.jpg" alt="Third slide"> -->
-                <div style="background: url('img/group3.jpg') width:100%; height: 400px; no-repeat center top transparent;">&nbsp;</div>
+                <div style="width:100%; height: 400px; background: url('img/group3.jpg') no-repeat center top transparent;">&nbsp;</div>
               </div>
               <div class="container">
                 <div class="carousel-caption">
