--- a/resources/testweb/creator_main.html
+++ b/resources/testweb/creator_main.html
@@ -344,6 +344,13 @@
           (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
         })();
       </script>
+      <style type="text/css">
+
+.post-message {
+color: black !important;
+}
+
+</style>
       <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 
       <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
