--- a/resources/testweb/creator_main.html
+++ b/resources/testweb/creator_main.html
@@ -324,7 +324,7 @@
     
     <div class="othermain-col col-md-8 col-md-offset-2">
     <div class="row">
-        <div id="disqus_thread"></div>
+        <div id="disqus_thread"><p></p></div>
       <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
 
