--- a/resources/testweb/creator_main.html
+++ b/resources/testweb/creator_main.html
@@ -253,7 +253,7 @@
       <div class="row">
         <div class="col-lg-12">
           <div class="panel panel-primary">
-            <div class="panel-heading">
+            <div class="panel-body">
               <div class="row">
 
                 <div class="col-xs-12 text-left">
