--- a/resources/testweb/creator_main.html
+++ b/resources/testweb/creator_main.html
@@ -252,7 +252,7 @@
       <!-- a main one -->
       <div class="row">
         <div class="col-lg-12">
-          <div class="panel panel-info">
+          <div class="panel panel-default">
             <div class="panel-body">
               <div class="row">
 
