--- a/resources/testweb/creator_funds.html
+++ b/resources/testweb/creator_funds.html
@@ -218,11 +218,11 @@
   </div>
 
   <div class="col-md-6">
-    <div class="panel panel-primary">
+    <div class="table-paged panel panel-primary">
       <div class="panel-heading">
         <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Transactions</h3>
       </div>
-      <div id="creators_transactions" class="panel-body" style="height: 265px;overflow:auto;">
+      <div id="creators_transactions" class="small-chart panel-body">
         <script id="creators_transactions_template" type="x-tmpl-mustache"> 
           <table id="creators_transactions_table" class="table table-hover table-striped tablesorter">
             <thead> 
