--- a/resources/testweb/creator_overview.html
+++ b/resources/testweb/creator_overview.html
@@ -286,7 +286,7 @@
       <div class="panel-heading">
         <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Current Bids and Asks</h3>
       </div>
-      <div id="bids_asks" class="panel-body" style="height: 265px;overflow:auto;">
+      <div id="bids_asks" class="panel-body small-table">
         <script id="bids_asks_template" type="x-tmpl-mustache"> 
           <table id="bids_asks_table" class="table table-hover table-striped tablesorter">
             <thead> 
