--- a/resources/testweb/userdashboard_overview.html
+++ b/resources/testweb/userdashboard_overview.html
@@ -329,7 +329,7 @@
           <div class="panel-heading">
             <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Recent Activity</h3>
           </div>
-          <div id="recent_activity" class="panel-body" style="height: 265px;overflow:auto;">
+          <div id="recent_activity" class="panel-body small-table">
             <script id="recent_activity_template" type="x-tmpl-mustache"> 
               <table id="recent_activity_table" class="table table-hover table-striped tablesorter">
                 <thead> 
