--- a/resources/testweb/creator_pieces.html
+++ b/resources/testweb/creator_pieces.html
@@ -218,7 +218,7 @@
       <div class="panel-heading">
         <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Pieces issued</h3>
       </div>
-      <div id="pieces_issued" class="panel-body" style="height: 265px;overflow:auto;">
+      <div id="pieces_issued" class="panel-body small-table">
         <script id="pieces_issued_template" type="x-tmpl-mustache"> 
           <table id="pieces_issued_table" class="table table-hover table-striped tablesorter">
             <thead> 
@@ -262,7 +262,7 @@
       <div class="panel-heading">
         <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Current Backers</h3>
       </div>
-      <div id="backers_current" class="panel-body" style="height: 265px;overflow:auto;">
+      <div id="backers_current" class="panel-body small-table">
         <script id="backers_current_template" type="x-tmpl-mustache"> 
           <table id="backers_current_table" class="table table-hover table-striped tablesorter">
             <thead> 
