--- a/resources/testweb/creator_overview.html
+++ b/resources/testweb/creator_overview.html
@@ -209,7 +209,7 @@
         <div class="panel-heading">
           <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Recent Activity</h3>
         </div>
-        <div id="creators_activity" class="panel-body"  style="height: 265px;overflow:auto;">
+        <div id="creators_activity" class="panel-body small-table">
           <script id="creators_activity_template" type="x-tmpl-mustache"> 
             <table id="creators_activity_table" class="table table-condensed table-hover table-striped tablesorter">
               <thead>
