--- a/resources/testweb/creator_overview.html
+++ b/resources/testweb/creator_overview.html
@@ -204,7 +204,7 @@
 
   <!-- The two top tables -->
   <div class="row"> 
-    <div class="col-lg-6">
+    <div class="col-md-6">
       <div class="panel panel-primary">
         <div class="panel-heading">
           <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Recent Activity</h3>
@@ -254,7 +254,7 @@
     
     
 
-    <div class="col-lg-6">
+    <div class="col-md-6">
       <div class="panel panel-primary">
         <div class="panel-heading">
           <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Price per piece history</h3>
@@ -268,7 +268,7 @@
   
 
   <div class="row">
-    <div class="col-lg-6">
+    <div class="col-md-6">
       <div class="panel panel-primary">
         <div class="panel-heading">
           <h3 id="creator_safety_popover" class="panel-title" data-trigger="hover"
@@ -281,7 +281,7 @@
         </div>
       </div>
     </div>
-    <div class="col-lg-6">
+    <div class="col-md-6">
     <div class="panel panel-primary">
       <div class="panel-heading">
         <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Current Bids and Asks</h3>
